reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_newtype_input.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructNewtype::reflect_input()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructNewtype"
  },
  {
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructNewtype",
        "fields": [
          {
            "name": "0",
            "type": {
              "name": "std::string::String"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      }
    ]
  }
]
