reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_newtype_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructNewtype::reflect_output()"
---
{
  "name": "",
  "types": [
    {
      "kind": "struct",
      "name": "reflect_demo::tests::basic::TestStructNewtype",
      "fields": [
        {
          "name": "0",
          "type": {
            "name": "std::string::String"
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::string::String",
      "description": "UTF-8 encoded string"
    }
  ]
}
