reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_one_basic_field_string.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_input_schema::<TestStructOneBasicFieldString>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "struct",
      "name": "reflect_demo::tests::basic::TestStructOneBasicFieldString",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "std::string::String"
          },
          "required": true
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "std::string::String",
      "description": "UTF-8 encoded string"
    }
  ]
}
