reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_one_basic_field_string_reflect_both_equally.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_schema::<TestStructOneBasicFieldStringReflectBothEqually>()"
---
{
  "name": "",
  "functions": [
    {
      "name": "",
      "input_type": {
        "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothEqually"
      },
      "output_type": {
        "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothEqually"
      },
      "serialization": [
        "json"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Empty",
        "description": "Struct object with no fields"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothEqually",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "u32"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflect::Infallible",
        "description": "Error object which is expected to be never returned"
      },
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothEqually",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "u32"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
