reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_one_basic_field_string_reflect_both_equally2.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "super::into_input_schema::<TestStructOneBasicFieldStringReflectBothEqually>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflect::Empty",
      "description": "Struct object with no fields"
    },
    {
      "kind": "struct",
      "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothEqually",
      "fields": [
        {
          "name": "_f",
          "type": {
            "name": "u32"
          },
          "required": true
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u32",
      "description": "32-bit unsigned integer"
    }
  ]
}
