reflect-demo/src/tests/snapshots/reflect_demo__tests__basic__reflect_struct_one_basic_field_string_reflect_both_equally2_output.snap
---
source: reflect-demo/src/tests/basic.rs
expression: "TestStructOneBasicFieldStringReflectBothEqually2::reflect_output()"
---
[
  {
    "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothEqually2"
  },
  {
    "name": "",
    "types": [
      {
        "kind": "struct",
        "name": "reflect_demo::tests::basic::TestStructOneBasicFieldStringReflectBothEqually2",
        "fields": [
          {
            "name": "_f",
            "type": {
              "name": "u32"
            },
            "required": true
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
]
